--- a/src/edge-bug.html
+++ b/src/edge-bug.html
@@ -8,7 +8,7 @@
   <body>
     <script>
       function normalizePropsOptions(raw) {
-        if (!raw) return []
+        if (!raw) return [] // if you comment this line it works WTF
         const normalizedEntry = ['hello'];
         return normalizedEntry;
       }
